# telemetry-dashboard

./: .env  .gitignore  Docker-compose.yml  Dockerfile  README.md  comandos.txt  prometheus.yml  pyproject.toml  structure.txt
data_app/: config.py  main.py
data_app/consumers/: consumer.py
data_app/messaging/: rabbitmq.py
data_app/metrics/: metrics.py
data_app/models/: raw_data.py  transformed_data.py
data_app/publishers/: publisher.py
data_app/services/: raw_data_service.py
data_app/tasks/: scheduler.py
data_app/utils/: logger.py
tests/: test_app.py  test_consumers.py  test_publishers.py  test_raw_data.py
