[project]
name = "data-app"
version = "0.1.0"
description = ""
package-mode = false
authors = [
    {name = "felipemmouraa",email = "felipe.moura@sou.inteli.edu.br"}
]
readme = "README.md"
requires-python = ">=3.13"



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.0"
uvicorn = "^0.34.0"
pika = "^1.3.0" 
psycopg2-binary = "^2.9.0"
apscheduler = "^3.8.0"
clickhouse-driver = "^0.2.0"
pandas = "^2.2.3"
pyarrow = "^19.0.0"
boto3 = "^1.36.0"
pytest = "^8.3.4"
supabase = "^2.13.0"
prometheus_client = "^0.16.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
httpx = "^0.28.1"  # for testing FastAPI endpoints


